--- a/0-/Client:gxmms2.mediawiki
+++ b/0-/Client:gxmms2.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=gxmms2| author=[[Johannes Heimansberg]]| website=[http://wejp.k.vu/projects/xmms2/ http://wejp.k.vu/projects/xmms2/]| version=0.7.1| devlanguage=C| ui=GTK+2| screenshots=[http://wejp.k.vu/projects/xmms2/gxmms2-070.png]| description=gxmms2 is a GTK2-based XMMS2 client, written in C. Its main window is small and simple. It includes a [http://wejp.k.vu/projects/xmms2/medialib-070.png playlist editor] with a medialib search and an artist browser and a file information dialog. Client written by Johannes Heimansberg.}}
+{{Client| name=gxmms2| author=[[Johannes Heimansberg]]| website=[http://wejp.k.vu/projects/xmms2/gxmms2]| version=0.7.1| devlanguage=C| ui=GTK+2| screenshots=[http://wejp.k.vu/images/gxmms2-070.png]| description=gxmms2 is a GTK2-based XMMS2 client, written in C. Its main window is small and simple. It includes a [http://wejp.k.vu/images/medialib-070-300x226.gif playlist editor] with a medialib search and an artist browser and a file information dialog. Client written by Johannes Heimansberg.}}
