Add reason "non-English content"
Levitation import of page 3125 rev 10656.

--- a/8-MediaWiki/Ipbreason-dropdown.mediawiki
+++ b/8-MediaWiki/Ipbreason-dropdown.mediawiki
@@ -3,6 +3,7 @@
 ** Removing content from pages
 ** Spamming links to external sites
 ** Posting completely non-XMMS2-related content
+** Posting non-English content
 ** Inserting nonsense/gibberish into pages
 ** Intimidating behaviour/harassment
 ** Abusing multiple accounts
