--- a/0-/Download XMMS2.mediawiki
+++ b/0-/Download XMMS2.mediawiki
@@ -57,6 +57,9 @@ For more clients you would need to [http://gpo.zugaina.org/Search?search=xmms2 c
 
 
 == Windows ==
+
+'''THESE ARE UNOFFICIAL BUILDS, IT'S RECOMMENDED TO BUILD FROM SOURCE'''
+
 Getting XMMS2 to build/run on Windows is mostly working, but not all features of XMMS2 are currently available on Windows, and some plugins are missing/broken. Also note that these packages have not been thoroughly tested by the XMMS2 team. See also: [[Windows]].
 
 * [http://xmms2.org/~puzzles/win32/XMMS2-DrJekyll.7z Download]
