update bugtracker url
Levitation import of page 732 rev 10676.

--- a/0-/Reporting bugs.mediawiki
+++ b/0-/Reporting bugs.mediawiki
@@ -1,4 +1,4 @@
-If you think you found a bug in XMMS2, please report it to the bugtracker at http://bugs.xmms2.xmms.se/ (CHECK FOR SIMILAR BUGS FIRST!)
+If you think you found a bug in XMMS2, please report it to the bugtracker at http://bugs.xmms2.org/ (check for similar bugs first!)
 
 The reason why the bugreporting tool requires you to register an account with a valid email adress is quite simple - we have little to no interest in bugreports from people we can't get hold of for additional information. Complaints about this will fall on deaf ears.
 
