Levitation import of page 5 rev 10747 (minor).

--- a/0-/Main Page.mediawiki
+++ b/0-/Main Page.mediawiki
@@ -1,37 +1,56 @@
-__NOTOC__
-__NOEDITSECTION__
+b  UFC.Primetime.St.Pierre.vs.Hardy.Part.1.WS.PDTV.XviD-JETSET b 
 
-''[http://pinnaclehip.blinkweb.com/ DePuy Hip Lawsuit]''
 
-<div class="split-half">
 
-=== Get Started! ===
-[[Getting Started|Getting started]] with XMMS2 is as easy as: [[Download XMMS2|download]], [[Install instructions|install]], [[Using the application|use]]!
+Description
+Note  I know there are already multiple releases for this video, on this site, but I think some people might like a scene release.  
+  
+From the nfo  
+  
+Jetset proudly presents  
+  
+UFC.Primetime.St.Pierre.vs.Hardy.Part.1.WS.PDTV  
+  
+- air date  xxx.xx  
+- release date  Mar.  
+- genre(s)  Fighting  
+- source  PDTV  
+- runtime  20 mins  
+- size   x MB  
+- resolution  624x 2  
+- video  XviD 1.2.2 @ 1127 kbps  
+- framerate   .00  
+- audio  MP3 v @ 128 kbps  
+  
+Release notes  
+  
+..enjoy  img   0    .net pic smilies smile1.gif   18   18     18     100     18   
 
-=== XMMS2 will: ===
-* play your music.
-* manage your [[The Medialib|music library]]
-* use [[collections]] to help you organise your music as you like
-* allow you to control it using a variety of [[XMMS2 Clients|clients]].
-* [[Project Status#XMMS2_Platform_Support_Status|run]] on [[Download_XMMS2#Linux|Linux]], [[Download_XMMS2#BSD|*BSD]], [[Download_XMMS2#MacOSX|OS X]], Solaris, and [[Download_XMMS2#Windows|Windows]].
 
-<small>[[what XMMS2 will not do | XMMS2 will not...]]</small>
-=== Features ===
-{{FeatureList}}
 
-</div>
 
-<div class="split-half">
-<!-- i've got an idea.. let's replace this with a web 2.0 style jumble of irregularly sized tags! -->
 
-=== News and events ===
-<!-- placeholder for important announcements -->
-{{ShortNews}}
 
-=== [http://planet.xmms.se Planet XMMS2] ===
-<feed items="5" showdesc="false" showtitle="false">http://planet.xmms.se/rss20.xml</feed>
-[http://planet.xmms.se/rss20.xml RSS Feed]
-</div>
 
-<div class="visualClear"></div>
-<!-- placeholder for more stuff after the 2 columns -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    a 4  1   a td 3 s td 
+  a 4  1   a 
+  
+
+
+I have 20,000 other titles like this! If you are interested email me at buyeastactives gmail . com
+Or ask me for the list. Thanks.
