--- a/0-/Release:DrParnassus.mediawiki
+++ b/0-/Release:DrParnassus.mediawiki
@@ -31,10 +31,12 @@ Notes about medialib conversion...
 === Notes to client authors ===
 
 * API changes.. 
+* Public headers no longer pull in stdio.h and stdlib.h, so make sure to include those yourself as required.
 
 === Notes to xform authors ===
 
 * Metadata scraper stuff
+* Public headers no longer pull in stdio.h and stdlib.h, so make sure to include those yourself as required.
 
 === Notes to packagers ===
 
