xmms.se -> xmms2.org
Levitation import of page 1323 rev 10767.

--- a/0-/Client:Promoe.mediawiki
+++ b/0-/Client:Promoe.mediawiki
@@ -4,7 +4,7 @@
 |author=Thomas Frauendorfer
 |author2=Tobias RundstrÃ¶m
 |author3=Daniel Svensson
-|website=[http://git.xmms.se git.xmms.se]
+|website=[http://git.xmms2.org git.xmms2.org]
 |version=0.1.1
 |devlanguage=C++
 |ui=Qt4
