/* How to use samba */ fix: the command is add, not radd
Levitation import of page 2458 rev 10785 (minor).

--- a/0-/Samba.mediawiki
+++ b/0-/Samba.mediawiki
@@ -8,6 +8,6 @@ BE CAREFUL...THAT WILL ALLOW EVERYONE TO BROWSE YOUR SHARES...Mabe there is anot
 *then in url is:
  smb://YourMachine/Yourshare
 for instance with the command line client you can add it typing the following:
- xmms2 radd smb://192.168.1.111/music
+ xmms2 add smb://192.168.1.111/music
 
 You could also use a password-protected share and use the url smb://YourUserName:YourPassword@YourMachine/Yourshare
