s/xmms.se/xmms2.org/
Levitation import of page 1948 rev 10840.

--- a/0-/Design of XMMS2.mediawiki
+++ b/0-/Design of XMMS2.mediawiki
@@ -115,6 +115,6 @@ A signal is a type of notification which a client can request from the daemon to
 Similar to signals, broadcasts are a notification requested by the client to stay updated with the daemon. However, broadcasts differ from signals in that they can be called any arbitrary number of times and don't need restarting. Also unlike signals, broadcasts are called when the daemon's state changes, which means it is less like peeking in on the state since broadcasts are called as events happen. Synchronous clients can use broadcasts, however it is not common practice as waiting on a broadcast result means waiting for a specific event to occur in the daemon, which can take any arbitrary length of time. Some broadcasts are never called during the life of a client, so it generally makes more sense to use broadcasts in asynchronous clients, so that notifiers are called when an event occurs. In practice, broadcasts are useful for things like keeping playlists synchronized.
 
 == Clients ==
-XMMS2 clients may be written in a variety of languages, using libxmmsclient and its associated bindings. There are subtle differences in the API offered by the bindings for various languages. For more information, please see [[Writing XMMS2 Clients]]; for useful code examples, see the [http://git.xmms.se/?p=xmms2-tutorial.git;a=summary xmms2-tutorial] Git repository. ''xmms2-tutorial'' includes example client code in C, C++, Ruby, Python, Java, and Perl.
+XMMS2 clients may be written in a variety of languages, using libxmmsclient and its associated bindings. There are subtle differences in the API offered by the bindings for various languages. For more information, please see [[Writing XMMS2 Clients]]; for useful code examples, see the [http://git.xmms2.org/xmms2/xmms2-tutorial/ xmms2-tutorial] Git repository. ''xmms2-tutorial'' includes example client code in C, C++, Ruby, Python, Java, and Perl.
 
 [[Category:XMMS2 Technical Details]]
