--- a/0-/Hotspot based metadata.mediawiki
+++ b/0-/Hotspot based metadata.mediawiki
@@ -1,3 +1,14 @@
+== Terminology ==
+
+* non-volatile metadata, or simply just metadata
+** Metadata that's written to the media library. Examples: artist, title, file size
+
+* volatile metadata (does not exist yet)
+** Metadata that's not written to the media library. Examples: lyrics, shoutcast artist/title, soundcloud comments
+
+* auxdata
+** Internal decoder specific metadata. Examples: decoder config passed from container xform to the xform doing the decoding.
+
 == Problems with the current design ==
 
 * Today xforms have direct access to the media library and writes to it when they see fit, this poses a problem since there might be buffering of the audio data that should really be played before the metadata is updated.
