--- a/0-/Hotspot based metadata.mediawiki
+++ b/0-/Hotspot based metadata.mediawiki
@@ -16,7 +16,7 @@
 * All metadata must be routed via the medialibrary today, no room for volatile information such as soundcloud comments, lyrics, artist/title of streams etc.
 * xmms_xform_metadata_(set|get)* and xmms_xform_auxdata_(set|get)* APIs are practically identical and they can easily be unified. (macros for compatibility)
 
-== Solution proposal ==
+== Solution proposal A (nano) ==
 
 * Access to the xmms_medialib_t object will be completely removed from xform.c as it is today, and will be handled only by a xmms_xform_chain_factory or some better name.
 * Metadata will be fetched from the media library on xform chain creation and xforms will thus not need the media library during their life time.
@@ -24,7 +24,7 @@
 * Metadata may be marked as volatile, non-volatile, or private (auxdata). only non-volatile will end up in the media library, and only volatile will end up being sent as a broadcast_playback_current_info.
 * Since no xform chain tail reads are performed when scanning for metadata, there must be a drain() function which drains the metadata from the hotspots queue that has been gathered up to that point.
 * Hotspots queues will remain like today, but their data will move to the next xform as it reads past a hotspot position with data in the previous xform.
-* An xform may have an internal buffer, so hotspot position should be bytes offset from start for hotspots to hit/migrate at correct time. 
+* An xform may have an internal buffer, so hotspot position should be bytes offset from start for hotspots to hit/migrate at correct time.
 
 == Unresolved problems ==
 
