--- a/0-/Client:AlbumThing.mediawiki
+++ b/0-/Client:AlbumThing.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=AlbumThing| author=[[Sebastian Sareyko]]| website=http://sareyko.net/hg/~sebastian/AlbumThing/| version=[http://sareyko.net/hg/~sebastian/AlbumThing/ 0.2]| devlanguage=Python| ui=GTK2| screenshots=[http://i.imgur.com/BTqdk.png] | description=A very simple client that shows a list of available Albums. Selecting one or more Albums fills the playlist with the Albums' songs.}}
+{{Client| name=AlbumThing| author=[[Sebastian Sareyko]]| website=http://bitbucket.org/sareyko/albumthing/| version=[http://bitbucket.org/sareyko/albumthing/ 0.2]| devlanguage=Python| ui=GTK2| screenshots=[http://i.imgur.com/BTqdk.png] | description=A very simple client that shows a list of available Albums. Selecting one or more Albums fills the playlist with the Albums' songs.}}
