--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -40,6 +40,7 @@ All current clients should be found here, but not every entry in this list is up
 {| class="wikitable"
 !                  Name         || Kind || Language || Status || Description
 {{ClientTableEntry|Muxic        | Graphical / Cocoa | Obj-C | development stalled (2009-11) | Minimal windowshade for Mac OS X }}
+{{ClientTableEntry|xmms2-cdinfo | Console | C++ | developement stalled (2012-09) | CD database client, updates cdda:// medialib entries}}
 {{ClientTableEntry|xmms2-hotkey | Hotkeys (X11/console) | C++ | stable (since 2009-08) | Control XMMS2 via X11 and/or console keys/mouse, supports multi-key combinations }}
 {{ClientTableEntry|Azrael       | Graphical / GTK | C | development stalled (2009-07) | Basic player with nice additions }}
 {{ClientTableEntry|lagn         | Emacs Mode | emacs-lisp | development stalled (2009-07) | Control XMMS2 within emacs }}
@@ -72,7 +73,6 @@ All current clients should be found here, but not every entry in this list is up
 {{ClientTableEntry|Wmxmms2      | Dockapp | C | stable | Client dockapp for WindowMaker or any other dockapp-capable windowmanager }}
 {{ClientTableEntry|x2c          | console | ruby | stable (since 2007-06) | little rubyistic console client with advanced features}}
 {{ClientTableEntry|XMMS2Musica  | Graphical / Cairo (skinnable) | Python | in development | Template-alike simple skinned player }}
-{{ClientTableEntry|xmms2-cdinfo | Console | C++ | in development | CD database client, updates cdda:// medialib entries}}
 {{ClientTableEntry|xmms2-mpris-bridge| console / dbus | Python | in development | Provides a MPRIS interface for XMMS2 }}
 {{ClientTableEntry|xmms2-notify| Graphical / libnotify | C | in development | Provides desktop notifications }}
 {{ClientTableEntry|xmms2-osd| On-Screen Display / XOSD | Python | rewrite, in development | Simple song info on-screen display }}
