--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -33,6 +33,7 @@ All current clients should be found here, but not every entry in this list is up
 {{ClientTableEntry|XMMS2 CLI client| console | C | in development | feature-rich, basic client that comes with XMMS2 }}
 {{ClientTableEntry|xmms2swi     | Browser / Webclient | PHP | development stalled (2010-04) | Simple web interface, small and works well with ALL browsers! }}
 {{ClientTableEntry|XMMS2tray    | Tray Icon / GTK | Python | development stalled (2010-11) | *nix GTK+2 system tray integration }}
+{{ClientTableEntry|xmms2-xaw    | Graphical / Xaw | C | in development | Lightweight with a player and a playlist window  }}
 |}
 
 = Stalled =
