--- a/0-/Main Page.mediawiki
+++ b/0-/Main Page.mediawiki
@@ -1,1 +1,1 @@
-The terrific looking pig hopped over the awful pet. Many people were walking down the road but the autos continuouslied stream down the highway. Lastly, Mel determined he 'd had enough and jumped in the rowboat. "All's well that ends well," claimed he, as he proceeded down the lake to Forestville.
+New Body Text
